# quadrotor_control

./: LICENSE
quadrotor_common/: CMakeLists.txt  package.xml
quadrotor_common/include/quadrotor_common/: wrench_interface.h
quadrotor_controller/: CMakeLists.txt  package.xml  quadrotor_controller_plugin.xml
quadrotor_controller/config/: controllers.yaml
quadrotor_controller/config/mpc/: task.info
quadrotor_controller/include/quadrotor_controller/: controller.h
quadrotor_controller/launch/: load_controllers.launch
quadrotor_controller/src/: controller.cpp
quadrotor_description/: CMakeLists.txt  package.xml
quadrotor_description/launch/: empty_world.launch
quadrotor_description/urdf/: quadrotor.gazebo.xacro  quadrotor.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_downward_cam.gazebo.xacro  quadrotor_downward_cam.urdf.xacro  quadrotor_hokuyo_utm30lx.gazebo.xacro  quadrotor_hokuyo_utm30lx.urdf.xacro  quadrotor_with_asus.gazebo.xacro  quadrotor_with_asus.urdf.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.gazebo.xacro  quadrotor_with_asus_with_hokuyo_utm30lx.urdf.xacro  quadrotor_with_cam.gazebo.xacro  quadrotor_with_cam.urdf.xacro  quadrotor_with_kinect.gazebo.xacro  quadrotor_with_kinect.urdf.xacro
quadrotor_description/urdf/sensors/: asus_camera.urdf.xacro  generic_thermal_camera.urdf.xacro  hokuyo_utm30lx.urdf.xacro  kinect_camera.urdf.xacro  quadrotor_hokuyo_utm30lx.gazebo.xacro  sonar_sensor.urdf.xacro  thermaleye_camera.urdf.xacro
quadrotor_estimation/: CMakeLists.txt  package.xml
quadrotor_estimation/include/quadrotor_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
quadrotor_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
quadrotor_gazebo/: CMakeLists.txt  package.xml  quadrotor_hw_sim_plugin.xml
quadrotor_gazebo/config/: default.yaml
quadrotor_gazebo/include/quadrotor_gazebo/: quadrotor_hw_sim.h
quadrotor_gazebo/launch/: empty_world.launch  rmuc.launch  test_world.launch
quadrotor_gazebo/src/: quadrotor_hw_sim.cpp
quadrotor_gazebo/worlds/: rmuc.world  test_world.world
quadrotor_interface/: CMakeLists.txt  package.xml
quadrotor_interface/include/quadrotor_interface/: QuadrotorInterface.h
quadrotor_interface/include/quadrotor_interface/reference_manager/: ReferenceManager.h
quadrotor_interface/src/: QuadrotorInterface.cpp
quadrotor_interface/src/reference_manager/: ReferenceManager.cpp
quadrotor_localization/: CMakeLists.txt  package.xml
quadrotor_localization/config/: icp_params.yaml  robot_localization.yaml
quadrotor_localization/include/quadrotor_localization/: localization.h
quadrotor_localization/launch/: robot_localization_icp.launch  scan_to_map_location.launch
quadrotor_localization/src/: localization.cpp  main.cpp
quadrotor_msgs/: CMakeLists.txt  package.xml
quadrotor_navigation/: CMakeLists.txt  package.xml
quadrotor_navigation/launch/: amcl.launch  move_base.launch  navigation.launch
quadrotor_navigation/maps/: map.pgm  map.yaml  map_ttb.pgm  map_ttb.yaml  test_map.pgm  test_map.yaml
quadrotor_navigation/param/: base_local_planner_params.yaml  costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  local_costmap_params.yaml
quadrotor_planner/plan_env/: CMakeLists.txt  package.xml
quadrotor_planner/plan_env/include/plan_env/: grid_map.h
quadrotor_planner/plan_env/src/: grid_map.cpp
quadrotor_planner/plan_manage/launch/: advanced_param.xml  simple_run.launch
quadrotor_planner/plan_manage/src/: traj_server.cpp
velodyne_description/urdf/: VLP-16.urdf.xacro
velodyne_gazebo_plugins/: CMakeLists.txt
