<?xml version="1.0"?>
<package format="2">
    <name>quadrotor_common</name>
    <version>0.0.0</version>
    <description>The quadrotor_common package</description>

    <maintainer email="guanlin@todo.todo">guanlin</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>eigen</depend>

    <export>

    </export>

</package>
