<?xml version="1.0"?>
<package format="2">
    <name>quadrotor_gazebo</name>
    <version>0.0.0</version>
    <description>The quadrotor_gazebo package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="guanlin@todo.todo">guanlin</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Url tags are optional, but multiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://wiki.ros.org/quadrotor_wheel_gazebo</url> -->


    <!-- Author tags are optional, multiple are allowed, one per tag -->
    <!-- Authors do not have to be maintainers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>
    <!-- depend: build, export, and execution dependency -->
    <depend>roscpp</depend>

    <depend>gazebo</depend>
    <depend>gazebo_ros</depend>
    <depend>gazebo_ros_control</depend>

    <export>
        <gazebo_ros_control plugin="${prefix}/quadrotor_hw_sim_plugin.xml"/>
        <gazebo_ros gazebo_model_path="${prefix}/.."/>
    </export>
</package>
