<?xml version="1.0"?>
<package format="2">
    <name>quadrotor_interface</name>
    <version>0.0.0</version>
    <description>The quadrotor_interface package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="guanlin@todo.todo">guanlin</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>ocs2_mpc</depend>
    <depend>ocs2_ddp</depend>
    <depend>ocs2_quadrotor_ros</depend>
    <depend>quadrotor_msgs</depend>
    <depend>pinocchio</depend>

</package>
